hpa.yaml
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: timeserver
spec:
  minReplicas: 1
  maxReplicas: 10
metrics:
- resource:
    name: cpu
    target:
      averageUtilization: 20
      type: Utilization
  type: Resource
scaleTargetRef:
  apiVersion: apps/v1
  kind: Deployment
  name: timeserver
