deploy-timeserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeserver
spec:
  replicas: 3
  selector:
    matchLabels:
      pod: timeserver-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    metadata:
      labels:
        pod: timeserver-pod
    spec:
      containers:
        - name: timeserver-container
          image: registry.eqlan.ru/fill/myserver:v0.2
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 400Mi
          # readinessProbe:
          #   initialDelaySeconds: 15
          #   periodSeconds: 30
          #   httpGet:
          #     path: /readyz
          #     port: 80
          #     scheme: HTTP
          #   timeoutSeconds: 2
          #   failureThreshold: 1
          #   successThreshold: 1
          # livenessProbe:
          #   initialDelaySeconds: 30
          #   periodSeconds: 30
          #   httpGet:
          #     path: /healthz
          #     port: 80
          #     scheme: HTTP
          #   timeoutSeconds: 5
          #   failureThreshold: 3
          #   successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: timeserver
spec:
  selector:
    pod: timeserver-pod
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
